--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -45,12 +45,15 @@
     line-height: 30px;
     color: #757575 ;
 }
+.text-center{
+    text-align: center;
+}
 
 /* main style */
 header {
     background-color: #FFF8F3;
     background: url(../images/developer.png) , url(../images/header_bg.png),#FFF8F3;
-    background-position: top left, bottom right;
+    background-position: 23px 38px, bottom right;
     background-repeat: no-repeat;
     padding-top: 50px;
     
@@ -107,7 +110,7 @@ nav .menu a{
     max-width: 585px;
     vertical-align: middle;
 }
-#about{
+#about , #skills, #resume{
     padding-top: 130px;
 }
 #about .about-container{
@@ -130,9 +133,7 @@ nav .menu a{
 .about-info .info-card h4{
     font-size: 19px;
 }
-#skills{
-    padding-top: 130px;
-}
+
 #skills .skills-container{
  width: 71%;
  max-width: 1140px;
@@ -163,4 +164,78 @@ nav .menu a{
      font-size: 16px;
     color: #757575;
     line-height: 28px;
+}
+#resume .resume-container{
+     width: 71%;
+ max-width: 1140px;
+ margin: 113px auto 0px;
+ display: flex;
+ gap: 24px;
+}
+.resume-container .section-title{
+    color: #474747;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+.resume-card{
+    max-width: 511px;
+    margin-right: 47px;
+}
+.resume-card .card-title{
+    font-size: 25px;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #474747;
+}
+.resume-container hr{
+    margin: 30px 0;
+    color:#757575;
+}
+.resume-card .card-info{
+    font-size: 20px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    color:#757575;
+}
+.resume-card .card-text{
+    font-size: 16px;
+    line-height: 28px;
+    color:#757575;
+}
+footer{
+    margin-top: 130px;
+    background-color:#FFF8F3 ;
+    padding: 130px 0px;
+}
+footer .footer-container{
+    width: 71%;
+    max-width: 1140px;
+    margin: 0 auto;
+    display: flex;
+    gap: 116px;   
+}
+.footer-container h2{
+    color: #181818;
+    font-size: 35px;
+    margin-bottom: 20px;
+}
+.footer-container .social{
+    max-width: 562px;
+}
+.footer-container .social p{
+color: #474747;
+line-height: 28px;
+font-size: 16px;
+margin-bottom: 30px;
+}
+.footer-container .icons a{
+    margin-right: 24px;
+}
+.footer-container form input[type="text"],.footer-container form input[type="email"],.footer-container form textarea{
+   width: 461px; 
+   padding: 18px 31px;
+   margin-bottom: 24px;
+   border: none;
+   border-radius: 5px;
+   color: #757575;
 }
